<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d6d4d4"
    tools:context="com.example.vasileios.simplefiledialog.FileDialog">

    <!-- Action Bar -->
    <RelativeLayout
        android:id="@+id/custom_action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:background="#000">

        <FrameLayout
            android:id="@+id/storage_option_button"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:onClick="showOptions">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/options" />

        </FrameLayout>

        <TextView
            android:id="@+id/dialog_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/storage_option_button"
            android:text="@string/select_file"
            android:textColor="#FFFFFF"
            android:textSize="22dp" />

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/search_layout_shape">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/search"
                android:layout_gravity="center_vertical"
                android:paddingLeft="8dp"
                android:paddingTop="1dp"/>

            <EditText
                android:id="@+id/search_text"
                android:layout_width="100dp"
                android:singleLine="true"
                android:text="wsfsfsfsi"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:layout_gravity="center_vertical"
                android:textSize="14sp"
                android:background="#00000000"
                android:layout_height="wrap_content"
                />

            <ImageView
                android:visibility="gone"
                android:id="@+id/delete_search_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/delete_search"
                android:layout_marginLeft="2dp"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:onClick="deleteSearchText"/>

        </LinearLayout>

    </RelativeLayout>
    <!-- End of Action Bar -->

    <!-- Menu -->
    <LinearLayout
        android:id="@+id/file_manager_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/custom_action_bar"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/select_storage"
            android:textColor="#343434"
            android:textSize="17dp" />

        <RelativeLayout
            android:id="@+id/internal_storage_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:onClick="changePath">

            <ImageView
                android:id="@+id/internal_storage_image"
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:src="@drawable/internalstorage" />

            <TextView
                android:id="@+id/internal_storage_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/internal_storage_image"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:text="@string/internal_storage"
                android:textColor="#343434"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/internal_storage_path_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/internal_storage_text"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/internal_storage_image"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:text="@string/internal_storage_path"
                android:textColor="#343434"
                android:textSize="9dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sdcard_storage_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:onClick="changePath">

            <ImageView
                android:id="@+id/sdcard_storage_image"
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:src="@drawable/sdcardstorage" />

            <TextView
                android:id="@+id/sdcard_storage_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/sdcard_storage_image"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:text="@string/sd_storage"
                android:textColor="#343434"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/sdcard_storage_path_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sdcard_storage_text"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/sdcard_storage_image"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:text="@string/sd_storage_path"
                android:textColor="#343434"
                android:textSize="9dp" />

        </RelativeLayout>

    </LinearLayout>
    <!-- End of Menu -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/custom_action_bar">

        <!-- Files ListView -->
        <com.example.vasileios.simplefiledialog.ExpandableHeightListView
            android:id="@+id/phone_files"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <!-- End of Files ListView -->

    </ScrollView>

</RelativeLayout>
